...
    <string name="annotation_done">Done</string>
    <string name="annotation_reset">Reset</string>
    <string name="share_chooser_title">Share via</string>
    <string name="share_message">Shared from TIBCO JasperMobile</string>

    <!-- Save Report Activity -->
    <string name="sr_ab_title">Save Report</string>
    <string name="sr_report_name">File name</string>
    <string name="sr_output_format">Output format</string>
    <string name="sr_recurrence_type">Recurrence</string>
    <string name="sr_recurrence_none">None</string>
    <string name="sr_recurrence_simple">Simple</string>
    <string name="sr_recurrence_simple_unit_minute">Minutes</string>
...
    <string name="sr_failed_to_create_local_repo">Failed to create local file storage.</string>
    <string name="sr_failed_to_execute_report">Failed to execute report</string>

    <!-- Toasts -->
    <string name="sr_t_report_saved">Report saved to file successfully.</string>
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">This field is required.</string>
    <string name="sr_error_characters_not_allowed">The following characters are not allowed: * \\ / \" \' : ? | &lt; > + [ ]</string>
    <string name="sr_error_report_exists">A file with this name already exists.</string>

    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>
    <string name="f_empty_list_msg">No favorite items</string>

...
    <string name="failed_load_data">Failed to load data!</string>
    <string name="authenticator_label">Jasper accounts</string>
    <string name="wrong_action">Can not perform this action</string>
    <string name="no_network">There was a network error.</string>
    <string name="request_was_cancelled_explicitly">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_command_btn">Voice command</string>
    <string name="voice_command_title">Say some command</string>
    <string name="voice_command_undefined">Can not recognize command</string>
    <string name="voice_command_help">You can use voice commands to interact with resources. Two commands are supported: "run" and "find". For instance, you can say "run" with resource name to start report execution.</string>
    <string name="voice_command_not_show_again">Don\'t show again</string>

...
