<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2016 TIBCO Software,Inc.All rights reserved.
  ~ http://community.jaspersoft.com/project/jaspermobile-android
  ~
  ~ Unless you have purchased a commercial license agreement from TIBCO Jaspersoft,
  ~ the following license terms apply:
  ~
  ~ This program is part of TIBCO Jaspersoft Mobile for Android.
  ~
  ~ TIBCO Jaspersoft Mobile is free software:you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation,either version 3of the License,or
  ~ (at your option)any later version.
  ~
  ~ TIBCO Jaspersoft Mobile is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY;without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with TIBCO Jaspersoft Mobile for Android.If not,see
  ~ <http://www.gnu.org/licenses/lgpl>.
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Report Name Input Control -->
    <TextView
        style="@style/saveReport.reportName.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sr_report_name" />

    <EditText
        android:id="@+id/report_name_input"
        style="@style/saveReport.reportName.input" />

    <!-- Report output formats -->
    <TextView
        android:id="@+id/output_format_label"
        style="@style/saveReport.outputFormat.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sr_output_format" />

    <Spinner
        android:id="@+id/output_format_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/sr_output_format" />

    <LinearLayout
        android:id="@+id/rangeControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/saveReport.reportName.label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sr_from" />

            <TextView
                android:id="@+id/fromPageControl"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:paddingLeft="13dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/saveReport.reportName.label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sr_to" />

            <TextView
                android:id="@+id/toPageControl"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:paddingLeft="13dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

